--- a/views/layouts/layout.handlebars
+++ b/views/layouts/layout.handlebars
@@ -1,9 +1,11 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<title>LoginApp</title>
+	<title>SATIS Healthcare Login Application</title>
 	<link rel="stylesheet" href="/css/bootstrap.css" />
 	<link rel="stylesheet" href="/css/style.css" />
+		
+	
 </head>
 <body>
 	<div class="container">
@@ -19,9 +21,10 @@
             {{/if}}
           </ul>
         </nav>
-        <h3 class="text-muted">LoginApp</h3>
+        <h3 class="text-muted"> SATIS Healthcare </h3>
+	<center><img src="/css/Logo1.8.png" class="img-responsive" width="100px" height="100px"></center>
       </div>
-
+		
 
       <div class="row">
         <div class="col-lg-12">
@@ -44,7 +47,7 @@
       </div>
 
       <footer class="footer">
-        <p>&copy; 2015 LoginApp, Inc.</p>
+        <p>&copy;2017 SATIS Healthcare</p>
       </footer>
 
     </div> <!-- /container -->
