--- a/views/register.handlebars
+++ b/views/register.handlebars
@@ -4,6 +4,11 @@
         <div class="alert alert-danger">{{msg}}</div>
       {{/each}}
 {{/if}}
+
+ 
+	<meta name="google-signin-client_id" content="Satis-healthcare1.apps.googleusercontent.com">
+	<script src="https://apis.google.com/js/platform.js" async defer></script>
+	<div class="g-signin2" data-onsuccess="onSignIn"></div>
 <form method="post" action="/users/register">
    <div class="form-group">
     <label>Name</label>
@@ -27,3 +32,4 @@
   </div>
   <button type="submit" class="btn btn-default">Submit</button>
 </form>
+
