Changes to remove certain Auth
test

--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -1,3 +1,4 @@
  <h2 class="page-header">Dashboard</h2>
-<p>Welcome to your dashboard</p> 
-<p> this is a test 123</p> 
+<p>Welcome to your dashboard</p>
+<p> this is a test 123</p>
+<p> Test Test Test test test </p>
